--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -1697,10 +1697,6 @@ More precisely, $\triangle_{(P,\b{v})}$ is given by the explicit formula
 where $\rho_{\b{z}} P \eqdef 2\b{z}-P$ denotes the reflection of $P$ with respect to the point~$\b{z}$. 
 \end{theorem}
 
-\begin{definition}
-A \defn{geometric diagonal} of a polytope~$P$ is a diagonal of the form~$\triangle_{(P,\b{v})}$ for some vector~$\b{v} \in \R^d$ in generic position with respect to~$P$.
-\end{definition}
-
 To give the precise meaning of generic with respect~$P$ and the characterization of the faces in the image of~$\triangle_{(P,\b{v})}$, we now consider the following hyperplane arrangement.
 \vincent{add figure of fundamental hyperplane arrangements for simplex, cube, permutahedron.}
 
@@ -1709,7 +1705,12 @@ The \defn{fundamental hyperplane arrangement}~$\mathcal{H}_P$ of a polytope~$P \
 \end{definition}
 
 A vector is \defn{generic with respect to~$P$} if it does not belong to the union of the hyperplanes of the fundamental hyperplane arrangement~$\mathcal{H}_P$.
-Moreover, the geometric diagonal~$\triangle_{(P,\b{v})}$ only depends on the region of~$\mathcal{H}_P$ containing~$\b{v}$, see~\cite[Prop.~1.23]{LA21}.
+
+\begin{definition}
+    A \defn{geometric diagonal} of a polytope~$P$ is a diagonal of the form~$\triangle_{(P,\b{v})}$ for some vector~$\b{v} \in \R^d$ in generic position with respect to~$P$.
+\end{definition}
+
+A geometric diagonal~$\triangle_{(P,\b{v})}$ only depends on the region of~$\mathcal{H}_P$ containing~$\b{v}$, see~\cite[Prop.~1.23]{LA21}.
 
 Now the following \defn{universal formula}~\cite[Thm.~1.26]{LA21} expresses combinatorially the faces in the image of the geometric diagonal~$\triangle_{(P,\b{v})}$.
 Recall that the \defn{normal cone} of a face~$F$ of a polytope~$P$ in~$\R^d$ is the cone of directions~$\b{c} \in \R^d$ such that the maximum of the scalar product~$\dotprod{\b{c}}{\b{x}}$ over~$P$ is attained for some~$\b{x}$ in~$F$.
@@ -1799,7 +1800,8 @@ Applying \cref{thm:universalFormula}, we next describe the faces in the image of
 For this, the following definition will be convenient.
 
 \begin{definition}
-For $I,J \subseteq [n]$ and an ordered partition $\sigma$ of~$[n]$ into $k$ blocks, we say that $I$~\defn{dominates} $J$ in~$\sigma$ if for all $\ell \in [k]$, the first~$\ell$ blocks of~$\sigma$ contain more elements of~$I$ than of~$J$.
+    \label{def:domination}
+For $I,J \subseteq [n]$ and an ordered partition $\sigma$ of~$[n]$ into $k$ blocks, we say that $I$~\defn{dominates} $J$ in~$\sigma$ if for all $\ell \in [k]$, the first~$\ell$ blocks of~$\sigma$ contain more elements of~$I$ than of~$J$, or the same number of elements.
 \end{definition}
 
 \begin{theorem}[{\cite[Thm.~3.16]{LA21}}]
@@ -2241,6 +2243,7 @@ The $\LA$ and $\SU$ diagonals are the only operadic geometric diagonals which in
 %%%%%%%%%%%%%%%
 
 \subsection{Isomorphisms between operadic diagonals}
+\label{subsec:isos-LA-SU}
 
 Let $P$ be a centrally symmetric polytope, and let $s : P \to P$ be its involution, given by taking a point $p \in P$ to its reflection $s(p)$ with respect to the center of symmetry of $P$. 
 Note that this map is cellular, and induces an involution on the face lattice of $P$. 
@@ -2327,29 +2330,9 @@ Their facets for the $2$-dimensional permutahedron are illustrated on the first 
 
 \begin{example}
 \label{ex:ECbijection}
-We present the $(2,7)$-tree $\{15,234,6,7\} \times \{13,2,46,57\}$ (left) and its orderings giving facets of the $\LA$ (middle) and $\SU$ (right) diagonals, according to \cref{thm:facet-ordering}.
+Below are the two orderings of the $(2,7)$-tree $\{15,234,6,7\} \times \{13,2,46,57\}$ giving facets of the $\LA$ (left) and $\SU$ (right) diagonals, obtained via \cref{thm:facet-ordering}.
+Note that ordered partitions should be read from top to bottom.\Guillaume{Does this fit with previous conventions?}
 \begin{center}
-\begin{tikzpicture}[scale=.7]  
-\node (1) at (-1.5, -1) {$15$};
-\node (2) at (-1.5, -2) {$234$};
-\node (3) at (-1.5, -3) {$6$};
-\node (4) at (-1.5, -4) {$7$};
-%
-\node (5) at (1.5, -1) {$13$};
-\node (6) at (1.5, -2) {$2$};
-\node (7) at (1.5, -3) {$46$};
-\node (8) at (1.5, -4) {$57$};
-%
-\draw[thick] (1) to [in=180, out=0, looseness=0] (5); 
-\draw[thick] (1) to [in=180, out=0, looseness=0] (8);
-\draw[thick] (2) to [in=180, out=0, looseness=0] (5); 
-\draw[thick] (2) to [in=180, out=0, looseness=0] (6); 
-\draw[thick] (2) to [in=180, out=0, looseness=0] (7); 
-\draw[thick] (3) to [in=180, out=0, looseness=0] (7);
-\draw[thick] (4) to [in=180, out=0, looseness=0] (8);
-%
-\end{tikzpicture}
-$\quad$
 \begin{tikzpicture}[scale=.7]  
 \node (1) at (-1.5, -1) {$15$};
 \node (2) at (-1.5, -2) {$7$};
@@ -2372,6 +2355,61 @@ $\quad$
 \end{tikzpicture}
 $\quad$
 \begin{tikzpicture}[scale=.7]  
+    \node (2) at (1.5, -4) {$2$};
+    \node (13) at (1.5, -3) {$13$};
+    \node (46) at (1.5, -2) {$46$};
+    \node (57) at (1.5, -1) {$57$};
+    %
+    \node (7) at (-1.5, -4) {$7$};
+    \node (6) at (-1.5, -3) {$6$};
+    \node (234) at (-1.5, -2) {$234$};
+    \node (15) at (-1.5, -1) {$15$};
+    %
+    \draw[thick] (2) to [out=180, in=0, looseness=0] (234);
+    \draw[thick] (13) to [out=180, in=0, looseness=0] (15); 
+    \draw[thick] (13) to [out=180, in=0, looseness=0] (234);
+    \draw[thick] (46) to [out=180, in=0, looseness=0] (234);
+    \draw[thick] (46) to [out=180, in=0, looseness=0] (6); 
+    \draw[thick] (57) to [out=180, in=0, looseness=0] (15);
+    \draw[thick] (57) to [out=180, in=0, looseness=0] (7);
+    %
+    \end{tikzpicture}
+\end{center}
+In the $\LA$ facet (left), we have $7 < 234$ since the minimum $1$ of the path $7 \xrightarrow{7} 57 \xrightarrow{5} 15 \xrightarrow{1} 13 \xrightarrow{3} 234$ between the two vertices is oriented from left to right. 
+In this case, we have $(I,J)=(\{1,7\},\{3,5\})$.
+Similarly, the path $57 \xrightarrow{5} 15 \xrightarrow{1} 13 \xrightarrow{3} 234 \xrightarrow{4} 46$ imposes that $57 < 46$, while we have $(I,J)=(\{1,4\},\{3,5\})$.
+\end{example}
+
+\begin{remark}
+    Note that forgetting the order in a facet of $\LAD$, and then ordering again the $(2,n)$-tree to obtain a facet of $\SUD$, provides an isomorphism between facets that was not considered in \cref{subsec:isos-LA-SU}.
+    However this map is not defined on the other faces.
+\end{remark}
+
+\begin{example}
+The isomorphism $rs\times rs$ from \cref{thm:bijection-operadic-diagonals} sends the $\LA$ facet from \cref{ex:ECbijection} (left) to the following $\SU$ facet (right).
+\begin{center}
+\begin{tikzpicture}[scale=.7]  
+    \node (1) at (-1.5, -1) {$15$};
+    \node (2) at (-1.5, -2) {$7$};
+    \node (3) at (-1.5, -3) {$234$};
+    \node (4) at (-1.5, -4) {$6$};
+    %
+    \node (5) at (1.5, -1) {$57$};
+    \node (6) at (1.5, -2) {$46$};
+    \node (7) at (1.5, -3) {$13$};
+    \node (8) at (1.5, -4) {$2$};
+    %
+    \draw[thick] (1) to [in=180, out=0, looseness=0] (5); 
+    \draw[thick] (1) to [in=180, out=0, looseness=0] (7);
+    \draw[thick] (2) to [in=180, out=0, looseness=0] (5); 
+    \draw[thick] (3) to [in=180, out=0, looseness=0] (6); 
+    \draw[thick] (3) to [in=180, out=0, looseness=0] (7); 
+    \draw[thick] (3) to [in=180, out=0, looseness=0] (8); 
+    \draw[thick] (4) to [in=180, out=0, looseness=0] (6);
+    %
+\end{tikzpicture}
+    $\quad$
+\begin{tikzpicture}[scale=.7]  
     \node (1) at (1.5, -4) {$13$};
     \node (2) at (1.5, -3) {$24$};
     \node (3) at (1.5, -2) {$57$};
@@ -2390,84 +2428,59 @@ $\quad$
     \draw[thick] (3) to [out=180, in=0, looseness=0] (7);
     \draw[thick] (4) to [out=180, in=0, looseness=0] (7);
     %
-    \end{tikzpicture}
+\end{tikzpicture}
 \end{center}
-Two paths providing order information are
-\begin{align*}
-    7 < 234 \text{ as } 7 \xrightarrow{7} 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \ \text{corresponding to } (I,J)=(\{1,7\},\{3,5\}), \\
-    57 < 46 \text{ as } 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \xrightarrow{4} 46 \ \text{corresponding to } (I,J)=(\{1,4\},\{3,5\}).
-\end{align*}
-The isomorphism $rs\times rs$ from \cref{thm:bijection-operadic-diagonals} sends the $\LA$ facet to the $\SU$ one
-Observe that the $\LA(7)$ conditions corresponding to paths, such as $( \{1,4\},\{3,5\})$, which implies that
-\begin{align*}
-    57 < 46 \quad \text{  as  } \quad 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \xrightarrow{4} 46 \ ,
-\end{align*}
-are mapped to $\SU(7)$ conditions corresponding to paths, e.g. the prior $(I,J)$-condition maps to~$(r(J),r(I))=( \{3,5 \},\{4,7\})$, which implies that
-\begin{align*}
-    24 < 13 \quad \text{ as } 24 \xrightarrow{4} 456 \xrightarrow{5} 57 \xrightarrow{7=\max(r(J)\cup r(I))} 37 \xrightarrow{3} 13 \ .
-\end{align*}
+Moreover, it sends the path $57 \xrightarrow{5} 15 \xrightarrow{1} 13 \xrightarrow{3} 234 \xrightarrow{4} 46 $ to the path $24 \xrightarrow{4} 456 \xrightarrow{5} 57 \xrightarrow{7} 37 \xrightarrow{3} 13$, where the maximum $7$ is oriented from right to left, witnessing the fact that $24 < 13$. 
+The associated $(I,J)=(\{1,4 \},\{3,5\})$ becomes $(r(J),r(I))=(\{3,5 \},\{4,7\})$.
 \end{example}
 
-\begin{remark}
-    Note that the composite $\LAD \xrightarrow{u} \EC \xrightarrow{o} \SUD$ provides another bijection between facets, however this map is not equal to $rs \times rs$ and is not defined on the other faces.
-\end{remark}
 
 %%%%%%%%%%%%%%%
 
 \subsection{Vertices of operadic diagonals}
 
-We are now interested in characterizing the vertices (i.e. pairs of permutations) that occur in any operadic diagonal. 
-As in the preceding Section, we study $\LAD$ first, and then transport our results to other operadic diagonals via isomorphisms. 
-
-\begin{definition}[Domination]
-For two non-overlapping proper subsets $X,Y \subsetneq \sigma$ of an ordered partition $\sigma$ with $m$ blocks, we say that the set $X$ \emph{dominates} $Y$ in $\sigma$ if for all $k \in [m]$, we have that~$\left| \sigma_{[k]} \cap X \right| \geq \left| \sigma_{[k]} \cap Y \right|$.
-\end{definition}
-
-The characterization of the $\LA$ diagonal in \cref{p:minimal} can be straightforwardly reformulated through domination. 
+We are now interested in characterizing the vertices that occur in an operadic diagonal as pattern-avoiding pairs of partitions of $[n]$. 
+These pairs form a strict subset of the weak Bruhat intervals. 
+We first need the following Lemma, which follows directly from the definition of domination (\cref{def:domination}).
 
 \begin{lemma}
-\label{l:LA-domination}
-For any pair of ordered partitions $(\sigma,\tau)$ we have that
-\begin{eqnarray*}
-    (\sigma,\tau) \notin \LAD & \iff \exists (I,J) \in \LA(n), & J \text{ dominates } I \text{ in } \sigma \text{ and } I \text{ dominates } J \text{ in } \tau \ . 
-\end{eqnarray*}
-\end{lemma}
-
-Moreover, as an immediate consequence of the definition, the domination of sets is conserved under deletion of elements in the following situation. 
-For $\sigma$ an ordered partition, and $x\in X$, $y \in Y$, we denote by $i_x,i_y$ the indices of the blocks containing each of them in $\sigma$. 
-
-\begin{lemma}[Coherent domination]
 \label{lem:Coherent Domination}
-Let $X,Y \subsetneq \sigma$ be two non-overlapping proper subsets of an ordered partition $\sigma$, and suppose that $X$ dominates $Y$ in $\sigma$. 
-For any $x\in X$, $y \in Y$, we have that $X\setminus x$ dominates $Y\setminus y$ in $\sigma$ if and only if either
+Let $\sigma$ be an ordered partition of $[n]$ and let $I,J \subseteq [n]$ be such that $I$ dominates $J$ in $\sigma$. 
+For an element $i$ in $I$ or $J$, we denote by $\nu(i)$ the index of the block containing it in $\sigma$. 
+Then, for any $i \in I,j \in J$, we have that $I\setminus i$ dominates $J\setminus j$ in $\sigma$ if and only if either
 \begin{enumerate}
-    \item $y$ comes before $x$ in $\sigma$, or 
-    \item for all $k$ in the open interval $(i_x,i_y)$, we have that $\left| \sigma_{[k]} \cap X \right| > \left| \sigma_{[k]} \cap Y \right|$.
+    \item $j$ comes before $i$ in $\sigma$, or 
+    \item for all $k$ between $\nu(i)$ and $\nu(j)$, the first $k$ blocks of $\sigma$ contain stricly more elements of $I$ than of $J$.
 \end{enumerate}
 \end{lemma}
 
-This enables the following characterisation of vertices in the diagonal as pattern-avoiding pairs of permutations.
+We are now ready for the characterization. 
 
-\begin{proposition}
+\begin{theorem}
 \label{prop: LAD Fish Pattern}
-A pair of permutations of is in the $\LA$ diagonal if and only if for any $k\geq 1$ and for any $(I,J) \in \LA(k)$ it avoids the pattern 
+A pair of permutations of $[n]$ is in the $\LA$ (resp. $\SU$) diagonal if and only if for any~$k\geq 1$ and for any $(I,J) \in \LA(n)$ (resp. $\SU(n)$) of size $|I|=|J|=k$ it avoids the pattern 
 \begin{align}
-    (j_1 i_1 j_2 i_2 \cdots j_k i_k,\ i_2 j_1 i_3 j_2 \cdots i_k j_{k-1} i_1 j_k) \ , \label{eq:pattern}
+    (j_1 i_1 j_2 i_2 \cdots j_k i_k,\ i_2 j_1 i_3 j_2 \cdots i_k j_{k-1} i_1 j_k) \ , \tag{LA} \label{eq:pattern} \\
+    \text{ resp. } (j_1 i_1 j_2 i_2 \cdots j_k i_k, \ i_1 j_k i_2 j_1 \cdots i_{k-1} j_{k-2}i_k j_{k-1}) \ , \tag{SU}
 \end{align}
-where $I=\{i_1,\dots,i_k\}$, $J=\{j_1,\dots,j_k\}$ and $i_1=\min(I\cup J)$.
-\end{proposition}
+where $I=\{i_1,\dots,i_k\}$, $J=\{j_1,\dots,j_k\}$ and $i_1=\min(I\cup J)$ (resp. $j_k=\max(I\cup J)$).
+\end{theorem}
 
-\begin{remark}
+\begin{example}
     In standardized form, there are $(k-1)!k!$ avoided patterns.
-    For $k=1,2$ they are given by $(21,12),(2134,4213)$ and $(3124,4312)$.
-\end{remark}
+    For $k=1,2$ they are given by $(21,12),(2134,4213)$ and $(3124,4312)$ for the $\LA$ diagonal, and by $(21,12), (1243,2431)$ and $(1342, 3421)$ for the $\SU$ diagonal.
+\end{example}
 
 \begin{proof}
+We give the proof for the $\LA$ diagonal, the one for the $\SU$ diagonal is similar, and can be obtained by applying either of the two isomorphisms of \cref{subsec:isos-LA-SU}.
+
+\Guillaume{C'est la qu'on va obtenir la condition de Hugh;...}
+
 Given the operadic nature of the $\LA$ diagonal (\cref{lem:operadic-ordering}), a pair of permutations $(\sigma,\tau)$ is in~$\LAD$ if and only if it satisfies every $(I,J)$ condition whose standardisation is of the form 
 \begin{align}
     (I_k,J_k) \eqdef (\{1,k+2,k+3,\dots,2k-1,2k\}, \{2,3,\dots,k+1\}) \label{eq:standard}
 \end{align}
-for some $k\geq 1$. Thus, according to \cref{l:LA-domination}, we have that $(\sigma,\tau) \notin \LAD$ if and only if there is an $(I,J)$ of standard form (\ref{eq:standard}) sucht that $J$ dominates $I$ in $\sigma$ and $I$ dominates $J$ in $\tau$.
+for some $k\geq 1$. Thus, according to, we have that $(\sigma,\tau) \notin \LAD$ if and only if there is an $(I,J)$ of standard form (\ref{eq:standard}) sucht that $J$ dominates $I$ in $\sigma$ and $I$ dominates $J$ in $\tau$.
 It remains to show this last condition is equivalent to the patterns (\ref{eq:pattern}).
 
 It is clear that if a pair of permutations $(\sigma,\tau)$ contains a pattern, then the associated $(I,J)$ satisfies the domination condition; thus we just need to show the reverse implication. 
@@ -2512,41 +2525,14 @@ This inductive process fully generates $\sigma$, and places all elements in $\ta
 However, as $j_k$ must be dominated by an element of $I$, this forces $w = i_1$ and $w'' =\varnothing$, completing the proof.
 \end{proof}
 
-\begin{remark}
+\begin{example}
     These are a subset of intervals of the weak Bruhat order...
-\end{remark}
-
-All the operadic diagonals admit similar characterisations. 
-In particular, the vertices of the $\SU$ diagonal are characterised as follows.
-
-\begin{proposition}\label{prop:SUD Fish Pattern}
-Let $(I_k,J_k) \eqdef (\{k,k+1,\dots,2k-1\},\{1,2,3,\dots,k-1,2k\})$.
-A pair of permutations $(\sigma,\tau)\in \SUD$ if, and only if, $\forall k,$ $(\sigma,\tau)$ avoids the set of $(k-1)!k!$ different patterns
-\begin{align*}
-    P_k \eqdef \{ (j_1 i_1 j_2 i_2 \cdots j_k i_k,\quad  i_1 j_k i_2 j_1 \cdots i_{k-1} j_{k-2}i_k j_{k-1}): j_k = 2k, I = \{i_1,...,i_k\},J = \{j_1,...,j_k\} \}
-\end{align*}
-In particular, for $k=1,2$ the patterns avoided are $(21,12), (1243,2431)$ and $(1342, 3421)$.
-\end{proposition}
-\begin{proof}
-We apply either of the face poset isomorphisms $rs \times rs,t(r\times r):\LAD \to \SUD$ (\cref{rem:Alternate Isomorphism}).
-By necessity, both isomorphisms produce the same set of patterns, and map $i_1=1$ in the $\LAD$ patterns of \cref{prop: LAD Fish Pattern} to $j_k = 2k$ in these $\SUD$ patterns.
-\end{proof}
-
-\begin{corollary} For any pair of permutations $(\sigma_1, \sigma_2$, there exists $(I,J) \in D(n)$ such that $((\sigma_1, \sigma_2),(I,J))$ satisfies the diagonal condition if and only if there exists $(I',J') \in E(m)$, $m<n$ such that $((\sigma_1, \sigma_2),(I',J'))$ satisfies the fish condition, with 
-\[
-E(m)=\set{(I,J)\in D(m)}{\begin{array}{l} \min(J)<\min(I-\min(I)), \\ |\llbracket 1; k \rrbracket \cap J| > |\llbracket 1; k \rrbracket \cap I| \\ \text{if } |\llbracket 1; k \rrbracket \cap J| \geq 2 \text{ and } I \subsetneq \llbracket 1; k \rrbracket \end{array}}
-\]
-\end{corollary}
-
-\begin{proof}
-It follows directly from the fish condition: if the fish condition is satisfied, as inversions of $\sigma_1$ are included in inversions of $\sigma_2$, we get $j_{k-1},j_k<i_k$ for any $k>1$.
-\end{proof}
+    \Guillaume{Give the lists in low dimensions?}
+\end{example}
 
 \begin{remark}
-    Fish condition
+    The avoided patterns resemble a fish, when drawn as... \Guillaume{Make some drawings?!}
 \end{remark}
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
