--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -313,3 +313,51 @@
   issn = {0097-3165},
   doi = {10.1016/j.jcta.2020.105277}
 }
+
+@article{saneblidze2009,
+  title = {The Bitwisted {{Cartesian}} Model for the Free Loop Fibration},
+  author = {Saneblidze, Samson},
+  year = {2009},
+  month = feb,
+  journal = {Topology and its Applications},
+  volume = {156},
+  number = {5},
+  pages = {897--910},
+  issn = {0166-8641},
+  urldate = {2023-07-22},
+}
+
+@article{serre1951,
+  title = {Homologie {{singuli\`ere des espaces fibr\'es}}},
+  author = {Serre, Jean-Pierre},
+  year = {1951},
+  journal = {Annals of Mathematics},
+  volume = {54},
+  number = {3},
+  eprint = {1969485},
+  eprinttype = {jstor},
+  pages = {425--505},
+  publisher = {{Annals of Mathematics}},
+  issn = {0003-486X},
+  urldate = {2020-12-12}
+}
+
+@article{EilenbergZilber53,
+  title = {On Products of Complexes},
+  author = {Eilenberg, Samuel and Zilber, Joseph A.},
+  year = {1953},
+  journal = {American Journal of Mathematics},
+  volume = {75},
+  pages = {200--204},
+  fjournal = {American Journal of Mathematics}
+}
+
+@article{EilenbergMacLane54,
+  title = {On the Groups {{H}}({{$\Pi$}},n). {{II}}. {{Methods}} of Computation},
+  author = {Eilenberg, Samuel and Mac Lane, Saunders},
+  year = {1954},
+  journal = {Annals of Mathematics},
+  volume = {60},
+  pages = {49--139},
+  fjournal = {Annals of Mathematics. Second Series}
+}
