--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -1748,11 +1748,9 @@ For any polytope $P$ and any generic vector $\b{v}$,
 \end{proposition}
 
 \begin{remark}
-For some polytopes such as the simplices, the cubes, the freehedra, and the associahedra, the reverse inclusion also holds.
-\vincent{reference}
-The resulting equality enhancing (\ref{eq:magique}) was called \defn{magical formula} by J.-L. Loday.
-\vincent{reference}
-Polytopes of greater complexity such as the multiplihedra, the operahedra or the permutahedra, do not possess this exceptional property. 
+For some polytopes such as the simplices \cite{EilenbergMacLane54}, the cubes \cite{serre1951}, the freehedra \cite{saneblidze2009}, and the associahedra \cite{masudaDiagonalAssociahedra2021}, the reverse inclusion also holds (in the case of the simplices and the cubes, the diagonals are know as \emph{Alexander--Whitney} and \emph{Serre} maps).
+According to \cite{masudaDiagonalAssociahedra2021}, the resulting equality enhancing~(\ref{eq:magique}) was called \defn{magical formula} by J.-L. Loday.
+Polytopes of greater complexity such as the multiplihedra \cite{MazuirLA22} or the operahedra \cite{LA21}, which include the permutahedra, do not possess this exceptional property. 
 \end{remark}
 
 \begin{remark}
